--- a/2 - Numpy e Bayes/2 - Numpy e Bayes.ipynb
+++ b/2 - Numpy e Bayes/2 - Numpy e Bayes.ipynb
@@ -1255,7 +1255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1282,7 +1282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
@@ -1323,7 +1323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -1354,7 +1354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -1399,7 +1399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1407,20 +1407,19 @@
      "output_type": "stream",
      "text": [
       "Matrice di covarianza per W1:\n",
-      " [35.234375 34.859375]\n",
+      " [[35.234375 23.296875]\n",
+      " [23.296875 34.859375]]\n",
       "\n",
       "Matrice di covarianza per W2:\n",
-      " [10.05 13.01]\n"
+      " [[10.05  8.85]\n",
+      " [ 8.85 13.01]]\n"
      ]
     }
    ],
    "source": [
     "# Esercizio 2: implementare il calcolo delle matrici di covarianza\n",
     "def compute_covariance_matrix(patterns, mean):\n",
-    "    cov_mat = np.zeros(patterns[0].shape)\n",
-    "\n",
-    "    for i in range(patterns[0].shape[0]):\n",
-    "        cov_mat[i] = ((patterns[:][:, i] - mean[i])@(patterns[:][:, i] - mean[i]).T).sum() / patterns.shape[0]\n",
+    "    cov_mat = ((patterns - mean).T@(patterns - mean)) / patterns.shape[0]\n",
     "    return cov_mat\n",
     "\n",
     "\n",
@@ -1444,21 +1443,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
-     "ename": "LinAlgError",
-     "evalue": "1-dimensional array given. Array must be at least two-dimensional",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mLinAlgError\u001b[0m                               Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[56], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Determinanti delle matrici di covarianza\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m det_cov_mat_W1 \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mlinalg\u001b[38;5;241m.\u001b[39mdet(cov_mat_W1)\n\u001b[0;32m      3\u001b[0m det_cov_mat_W2 \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mlinalg\u001b[38;5;241m.\u001b[39mdet(cov_mat_W2)\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mDeterminante cov_mat_W1:\u001b[39m\u001b[38;5;124m'\u001b[39m, det_cov_mat_W1)\n",
-      "File \u001b[1;32m<__array_function__ internals>:200\u001b[0m, in \u001b[0;36mdet\u001b[1;34m(*args, **kwargs)\u001b[0m\n",
-      "File \u001b[1;32mC:\\anaconda3\\Lib\\site-packages\\numpy\\linalg\\linalg.py:2135\u001b[0m, in \u001b[0;36mdet\u001b[1;34m(a)\u001b[0m\n\u001b[0;32m   2087\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m   2088\u001b[0m \u001b[38;5;124;03mCompute the determinant of an array.\u001b[39;00m\n\u001b[0;32m   2089\u001b[0m \n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m   2132\u001b[0m \n\u001b[0;32m   2133\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m   2134\u001b[0m a \u001b[38;5;241m=\u001b[39m asarray(a)\n\u001b[1;32m-> 2135\u001b[0m _assert_stacked_2d(a)\n\u001b[0;32m   2136\u001b[0m _assert_stacked_square(a)\n\u001b[0;32m   2137\u001b[0m t, result_t \u001b[38;5;241m=\u001b[39m _commonType(a)\n",
-      "File \u001b[1;32mC:\\anaconda3\\Lib\\site-packages\\numpy\\linalg\\linalg.py:183\u001b[0m, in \u001b[0;36m_assert_stacked_2d\u001b[1;34m(*arrays)\u001b[0m\n\u001b[0;32m    181\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m a \u001b[38;5;129;01min\u001b[39;00m arrays:\n\u001b[0;32m    182\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m a\u001b[38;5;241m.\u001b[39mndim \u001b[38;5;241m<\u001b[39m \u001b[38;5;241m2\u001b[39m:\n\u001b[1;32m--> 183\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m LinAlgError(\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m%d\u001b[39;00m\u001b[38;5;124m-dimensional array given. Array must be \u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[0;32m    184\u001b[0m                 \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mat least two-dimensional\u001b[39m\u001b[38;5;124m'\u001b[39m \u001b[38;5;241m%\u001b[39m a\u001b[38;5;241m.\u001b[39mndim)\n",
-      "\u001b[1;31mLinAlgError\u001b[0m: 1-dimensional array given. Array must be at least two-dimensional"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Determinante cov_mat_W1: 685.5039062500001\n",
+      "Determinante cov_mat_W2: 52.42800000000001\n",
+      "Inversa cov_mat_W1:\n",
+      " [[ 0.05085219 -0.03398504]\n",
+      " [-0.03398504  0.05139923]]\n",
+      "\n",
+      "Inversa cov_mat_W2:\n",
+      " [[ 0.24814984 -0.16880293]\n",
+      " [-0.16880293  0.19169146]]\n"
      ]
     }
    ],
