--- a/2 - Numpy e Bayes/2 - Numpy e Bayes.ipynb
+++ b/2 - Numpy e Bayes/2 - Numpy e Bayes.ipynb
@@ -1492,19 +1492,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Densità di probabilità condizionale p(X|w1) =  0.0032606524569577305\n",
+      "Densità di probabilità condizionale p(X|w2) =  0.0045486726533138806\n"
+     ]
+    }
+   ],
    "source": [
     "# Esercizio 3: implementare il calcolo delle densità di probabilità condizionali\n",
     "def compute_density(x, mean, inv_cov_matrix, det):\n",
     "    # Costante pi greca: np.pi\n",
-    "    # d = 2\n",
+    "    d = inv_cov_matrix.shape[0]\n",
     "    # Σ = matrice di covarianza\n",
     "    # np.exp(5) = e⁵ (calcolo esponenziale)\n",
     "    # |Σ| = determinante della matrice di covarianza\n",
     "    # Σ⁻¹ = inversa della matrice di covarianza\n",
     "    # ...\n",
+    "    return 1/(((2*np.pi)**(d/2))*det**0.5)*np.exp(-0.5*(x-mean).T@inv_cov_matrix@(x-mean))\n",
     "    \n",
     "# Densità di probabilità condizionali\n",
     "p_X_W1 = compute_density(X, mu_W1, inv_cov_mat_W1, det_cov_mat_W1)\n",
